# Basic-LangChain

./: README.md  pyproject.toml  requirements.txt
1-basic/: 1.ipynb  chatbot.py
