[project]
name = "lang-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain>=1.0.1",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
